Models added, button refactored,small ui component changes

--- a/office-spaces/src/app/pages/office-view/office-view.component.html
+++ b/office-spaces/src/app/pages/office-view/office-view.component.html
@@ -1,5 +1,5 @@
-<div class="container my-5">
-  <div class="row mb-5">
+<div class="container my-3 max-width-600">
+  <div class="row mb-3">
     <div class="col-1">
       <img src="assets/icons/arrow-left.svg" />
     </div>
@@ -12,13 +12,17 @@
   <app-office-card></app-office-card>
   <app-search-bar></app-search-bar>
 
-  <div class="my-5">
-    <div class="row">
-      <div class="col">
-        <div class="fs-24 fw-600">Staff Members In Office</div>
-      </div>
-      <div class="col-2 d-flex align-items-center">
-        <div class="fs-18">11</div>
+  <div class="mt-4 pt-2">
+    <div class="counter-container">
+      <div class="row">
+        <div class="col">
+          <div class="fs-24 fw-600">Staff Members In Office</div>
+        </div>
+        <div class="col-2 d-flex align-items-center justify-content-end">
+          <div>
+            <div class="fs-18">11</div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -29,7 +33,184 @@
   <app-member-overview></app-member-overview>
   <app-member-overview></app-member-overview>
 
-  <div class="overlay-button" (click)="addOfficeClicked()">
+  <div
+    class="overlay-button"
+    data-bs-toggle="modal"
+    data-bs-target="#add-new-member-modal-1"
+  >
     <img src="assets/icons/add-button.svg" />
+  </div>
+
+  <div
+    class="modal fade"
+    id="add-new-member-modal-1"
+    data-bs-backdrop="static"
+    data-bs-keyboard="false"
+    tabindex="-1"
+    aria-labelledby="staticBackdropLabel"
+    aria-hidden="true"
+  >
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content p-3 border-radius">
+        <div class="row">
+          <div class="col">
+            <div class="fs-24 fw-800 ms-3">New Staff Member</div>
+          </div>
+          <div
+            class="col-2 d-flex align-items-center justify-content-center"
+            data-bs-dismiss="modal"
+          >
+            <img src="assets/icons/close-circle.svg" />
+          </div>
+        </div>
+
+        <div class="blue-border-container mb-2 mt-4">
+          <input
+            type="text"
+            class="form-control border-0 shadow-none"
+            id="first-name"
+            placeholder="First Name"
+            [(ngModel)]="member.name"
+          />
+        </div>
+
+        <div class="blue-border-container my-2">
+          <input
+            type="text"
+            class="form-control border-0 shadow-none"
+            id="last-name"
+            placeholder="Last Name"
+            [(ngModel)]="member.surname"
+          />
+        </div>
+
+        <div class="my-4 d-flex justify-content-center">
+          <img src="assets/icons/modal-progress-1.svg" />
+        </div>
+
+        <div class="row justify-content-center">
+          <div
+            class="custom-button"
+            data-bs-toggle="modal"
+            data-bs-target="#add-new-member-modal-2"
+          >
+            NEXT
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div
+    class="modal fade"
+    id="add-new-member-modal-2"
+    data-bs-backdrop="static"
+    data-bs-keyboard="false"
+    tabindex="-1"
+    aria-labelledby="staticBackdropLabel"
+    aria-hidden="true"
+  >
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content p-3 border-radius">
+        <div class="row">
+          <div class="col-1 d-flex align-items-center">
+            <img src="assets/icons/arrow-left.svg" />
+          </div>
+          <div class="col pe-0">
+            <div class="fs-24 fw-800 ms-3">New Staff Member</div>
+          </div>
+          <div
+            class="col-2 d-flex align-items-center justify-content-center"
+            data-bs-dismiss="modal"
+          >
+            <img src="assets/icons/close-circle.svg" />
+          </div>
+        </div>
+        <div class="fs-24 fw-600 my-3">Avatar</div>
+
+        <div class="row justify-content-center mb-2">
+          <div *ngFor="let avatar of avatars; let i = index" class="mw-55 mx-2 my-1 d-flex justify-content-center">
+            <img
+              [ngClass]="toggle[i] ? 'dark' : 'null'"
+              class="my-2"
+              (click)="assignAvatar(i)"
+              src="{{ avatars[i] }}"
+            />
+          </div>
+
+          <!-- <div class="col-1 d-flex justify-content-center">
+            <img
+              [ngClass]="toggle ? 'dark' : 'null'"
+              class="my-2"
+              (click)="assignAvatar(0)"
+              src="assets/icons/astronaut1.svg"
+            />
+          </div>
+          <div class="col-1 d-flex justify-content-center">
+            <img
+              [ngClass]="toggle1 ? 'dark' : 'null'"
+              class="my-2"
+              (click)="assignAvatar(1)"
+              src="assets/icons/astronaut2.svg"
+            />
+          </div>
+          <div class="col-1 d-flex justify-content-center">
+            <img
+              [ngClass]="toggle2 ? 'dark' : 'null'"
+              class="my-2"
+              (click)="assignAvatar(2)"
+              src="assets/icons/astronaut3.svg"
+            />
+          </div>
+          <div class="col-1 d-flex justify-content-center">
+            <img
+              [ngClass]="toggle3 ? 'dark' : 'null'"
+              class="my-2"
+              (click)="assignAvatar(3)"
+              src="assets/icons/astronaut4.svg"
+            />
+          </div> -->
+        </div>
+
+        <!-- <div
+          class="row d-flex justify-content-center justify-content-evenly mx-4"
+        >
+          <div class="col-1 d-flex justify-content-center">
+            <img
+              [ngClass]="toggle4 ? 'dark' : 'null'"
+              class="my-2"
+              (click)="assignAvatar(4)"
+              src="assets/icons/astronaut5.svg"
+            />
+          </div>
+          <div class="col-1 d-flex justify-content-center">
+            <img
+              [ngClass]="toggle5 ? 'dark' : 'null'"
+              class="my-2"
+              (click)="assignAvatar(5)"
+              src="assets/icons/astronaut6.svg"
+            />
+          </div>
+          <div class="col-1 d-flex justify-content-center">
+            <img
+              [ngClass]="toggle6 ? 'dark' : 'null'"
+              class="my-2"
+              (click)="assignAvatar(6)"
+              src="assets/icons/astronaut7.svg"
+            />
+          </div>
+        </div> -->
+
+        <div class="my-4 d-flex justify-content-center">
+          <img src="assets/icons/modal-progress-2.svg" />
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="custom-button" (click)="addMember()">
+            ADD STAFF MEMBER
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
