--- a/office-spaces/src/app/components/member-overview/member-overview.component.css
+++ b/office-spaces/src/app/components/member-overview/member-overview.component.css
@@ -8,3 +8,11 @@
     margin-left: 1rem;
   }
 }
+
+.blue-border-container {
+  width: 100%;
+  background: #ffffff;
+  border: 1px solid #e8f3fc;
+  border-radius: 8px;
+  padding: 10px;
+}
