--- a/office-spaces/src/app/components/member-overview/member-overview.component.html
+++ b/office-spaces/src/app/components/member-overview/member-overview.component.html
@@ -1,13 +1,200 @@
-<div class="mt-5 holder">
+<div class="mt-4 holder">
   <div class="row align-items-center justify-content-center">
     <div class="col-2">
-      <img src="assets/icons/astronaut.svg" />
+      <img src="assets/icons/astronaut1.svg" />
     </div>
     <div class="col">
       <div class="ms-2">Jacques Jordaan</div>
     </div>
-    <div class="col-2">
+    <div class="col-2" data-bs-toggle="modal" data-bs-target="#modal3">
       <img src="assets/icons/elipse.svg" />
+    </div>
+  </div>
+</div>
+
+<div
+  class="modal fade"
+  id="modal3"
+  data-bs-keyboard="false"
+  tabindex="-1"
+  aria-labelledby="staticBackdropLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content p-3 border-radius">
+      <div class="row justify-content-center">
+        <div
+          class="custom-button"
+          data-bs-toggle="modal"
+          data-bs-target="#edit-member-modal-1"
+        >
+          EDIT STAFF MEMBER
+        </div>
+      </div>
+
+      <div
+        class="blue-text text-center pt-4 pb-2"
+        data-bs-toggle="modal"
+        data-bs-target="#delete-member-modal"
+      >
+        DELETE STAFF MEMBER
+      </div>
+    </div>
+  </div>
+</div>
+
+<div
+  class="modal fade"
+  id="delete-member-modal"
+  data-bs-keyboard="false"
+  tabindex="-1"
+  aria-labelledby="staticBackdropLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content p-3 border-radius">
+      <div class="row">
+        <div class="col-1">
+          <img src="assets/icons/arrow-left.svg" />
+        </div>
+        <div class="col pe-0">
+          <div class="fs-20 fw-b ms-3">
+            Are You Sure You Want To Delete Staff Member?
+          </div>
+        </div>
+      </div>
+      <div class="row justify-content-center mt-5">
+        <div class="custom-button-red">DELETE MEMBER</div>
+      </div>
+
+      <div class="blue-text text-center pt-4 pb-4">KEEP MEMBER</div>
+    </div>
+  </div>
+</div>
+
+<div
+  class="modal fade"
+  id="edit-member-modal-1"
+  data-bs-backdrop="static"
+  data-bs-keyboard="false"
+  tabindex="-1"
+  aria-labelledby="staticBackdropLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content p-3 border-radius">
+      <div class="row">
+        <div class="col">
+          <div class="fs-24 fw-800 ms-3">Edit Staff Member</div>
+        </div>
+        <div
+          class="col-2 d-flex align-items-center justify-content-center"
+          data-bs-dismiss="modal"
+        >
+          <img src="assets/icons/close-circle.svg" />
+        </div>
+      </div>
+
+      <div class="blue-border-container mb-2 mt-4">
+        <input
+          type="text"
+          class="form-control border-0 shadow-none"
+          id="first-name"
+          placeholder="First Name"
+        />
+      </div>
+
+      <div class="blue-border-container my-2">
+        <input
+          type="text"
+          class="form-control border-0 shadow-none"
+          id="last-name"
+          placeholder="Last Name"
+        />
+      </div>
+
+      <div class="my-4 d-flex justify-content-center">
+        <img src="assets/icons/modal-progress-1.svg" />
+      </div>
+
+      <div class="row justify-content-center">
+        <div
+          class="custom-button"
+          data-bs-toggle="modal"
+          data-bs-target="#edit-member-modal-2"
+        >
+          NEXT
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div
+  class="modal fade"
+  id="edit-member-modal-2"
+  data-bs-backdrop="static"
+  data-bs-keyboard="false"
+  tabindex="-1"
+  aria-labelledby="staticBackdropLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content p-3 border-radius">
+      <div class="row">
+        <div class="col-1 d-flex align-items-center">
+          <img src="assets/icons/arrow-left.svg" />
+        </div>
+        <div class="col pe-0">
+          <div class="fs-24 fw-800 ms-3">Edit Staff Member</div>
+        </div>
+        <div
+          class="col-2 d-flex align-items-center justify-content-center"
+          data-bs-dismiss="modal"
+        >
+          <img src="assets/icons/close-circle.svg" />
+        </div>
+      </div>
+      <div class="fs-24 fw-600 my-3">Avatar</div>
+
+      <div
+        class="row d-flex justify-content-center justify-content-evenly mb-2"
+      >
+        <div class="col-1 d-flex justify-content-center">
+          <img class="my-2" src="assets/icons/astronaut1.svg" />
+        </div>
+        <div class="col-1 d-flex justify-content-center">
+          <img class="my-2" src="assets/icons/astronaut2.svg" />
+        </div>
+        <div class="col-1 d-flex justify-content-center">
+          <img class="my-2" src="assets/icons/astronaut3.svg" />
+        </div>
+        <div class="col-1 d-flex justify-content-center">
+          <img class="my-2" src="assets/icons/astronaut4.svg" />
+        </div>
+      </div>
+
+      <div
+        class="row d-flex justify-content-center justify-content-evenly mx-4"
+      >
+        <div class="col-1 d-flex justify-content-center">
+          <img class="my-2" src="assets/icons/astronaut5.svg" />
+        </div>
+        <div class="col-1 d-flex justify-content-center">
+          <img class="my-2" src="assets/icons/astronaut6.svg" />
+        </div>
+        <div class="col-1 d-flex justify-content-center">
+          <img class="my-2" src="assets/icons/astronaut7.svg" />
+        </div>
+      </div>
+
+      <div class="my-4 d-flex justify-content-center">
+        <img src="assets/icons/modal-progress-2.svg" />
+      </div>
+
+      <div class="row justify-content-center">
+        <div class="custom-button">UPDATE STAFF MEMBER</div>
+      </div>
     </div>
   </div>
 </div>
