--- a/office-spaces/src/app/components/office-card/office-card.component.html
+++ b/office-spaces/src/app/components/office-card/office-card.component.html
@@ -5,7 +5,7 @@
         <h3 class="fw-800">Specno</h3>
       </div>
       <div class="col d-flex justify-content-end">
-        <div class="icon me-3">
+        <div class="icon me-3" (click)="editOfficeClicked()">
           <img src="assets/icons/edit.svg" />
         </div>
       </div>
@@ -19,7 +19,9 @@
       </div>
       <div class="col-8 justify-content-start">
         <!-- <div class="fs-12 fw-700 py-2">5&nbsp;</div> -->
-        <div class="fs-12 ps-2 text-color"><strong>5</strong> Staff Members in Office</div>
+        <div class="fs-12 ps-2 text-color">
+          <strong>5</strong> Staff Members in Office
+        </div>
       </div>
       <div class="col"></div>
     </div>
@@ -43,7 +45,11 @@
       </div>
     </div>
 
-    <div id="dropdown" [ngClass]="status ? 'show' : 'hide'" (click)="officeCardClicked()">
+    <div
+      id="dropdown"
+      [ngClass]="status ? 'show' : 'hide'"
+      (click)="officeCardClicked()"
+    >
       <div class="row pb-2 pt-3 flex-nowrap align-items-center">
         <div class="col-2 mw-70">
           <div class="wh-24 ms-3">
