--- a/office-spaces/src/app/components/office-details-form/office-details-form.component.html
+++ b/office-spaces/src/app/components/office-details-form/office-details-form.component.html
@@ -82,4 +82,10 @@
     </div>
     <div class="col"></div>
   </div>
+
+  <div class="mt-5">
+    <div class="row justify-content-center">
+      <div class="custom-button">ADD OFFICE</div>
+    </div>
+  </div>
 </div>
