--- a/office-spaces/src/app/pages/edit-office/edit-office.component.html
+++ b/office-spaces/src/app/pages/edit-office/edit-office.component.html
@@ -1,10 +1,10 @@
-<div class="container my-5">
+<div class="container my-3 max-width-600">
   <div class="row mb-5">
     <div class="col-1">
       <img src="assets/icons/arrow-left.svg" />
     </div>
     <div class="col d-flex justify-content-center">
-      <div class="fs-18">New Office</div>
+      <div class="fs-18">Edit Office</div>
     </div>
     <div class="col-1"></div>
   </div>
