--- a/office-spaces/src/app/pages/office-view/office-view.component.css
+++ b/office-spaces/src/app/pages/office-view/office-view.component.css
@@ -3,3 +3,25 @@
   right: 20px;
   bottom: 20px;
 }
+
+.dark {
+  outline: 4px solid #475569;
+  border-radius: 50px;
+}
+
+.border-radius {
+  border-radius: 8px;
+}
+
+.blue-border-container {
+  width: 100%;
+  background: #ffffff;
+  border: 1px solid #e8f3fc;
+  border-radius: 8px;
+  padding: 10px;
+}
+
+.counter-container {
+  width: 100%;
+  padding-right: 10px;
+}
