--- a/office-spaces/src/styles.css
+++ b/office-spaces/src/styles.css
@@ -1,1 +1,132 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  background-color: #F8FAFC;
+  /* font-family: 'inter'; */
+  color: #484954;
+}
+
+/* @font-face {
+  font-family: inter;
+  src: url(assets/font/Inter-Regular.ttf) format("opentype");
+} */
+
+.icon {
+  width: 17px;
+  height: 17.4px;
+}
+
+.chevron {
+  width: 24px;
+  height: 24.56px;
+  margin-right: 2em;
+}
+
+.wh-24 {
+  width: 24px;
+  height: 24px;
+}
+
+.w-100 {
+  width: 100%;
+}
+
+.w-90 {
+  width: 90%;
+}
+
+.w-10 {
+  width: 10%;
+}
+
+.mw-55 {
+  max-width: 55px;
+}
+
+.mw-70 {
+  max-width: 70px;
+}
+
+.fs-12 {
+  font-size: 12px;
+}
+
+.fs-18 {
+  font-size: 18px;
+}
+
+.fs-20 {
+  font-size: 20px;
+}
+
+.fs-24 {
+  font-size: 24px;
+}
+
+.fw-400 {
+  font-weight: 400 !important;
+}
+
+.fw-800 {
+  font-weight: 800 !important;
+}
+
+.fw-700 {
+  font-weight: 700 !important;
+}
+
+.fw-600 {
+  font-weight: 600 !important;
+}
+
+.fw-b {
+  font-weight: bold;
+}
+
+.horizontal-line {
+  height: 1px;
+  border-top: 0.4px solid #0D4477;
+}
+
+.grey {
+  background: grey;
+}
+
+.text-color {
+  color: #484954;
+}
+
+.max-width-1000 {
+  max-width: 1000px;
+}
+
+.max-width-600 {
+  max-width: 600px;
+}
+
+.custom-button {
+  background: #489DDA;
+  border-radius: 100px;
+  height: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+  color: #F8FAFC;
+  max-width: 232px;
+}
+
+.custom-button-red {
+  background: #F44336;
+  border-radius: 100px;
+  height: 48px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+  color: #F8FAFC;
+  max-width: 232px;
+}
+
+.blue-text {
+  color: #489DDA;
+  font-size: 14px;
+}
