add Office and edit office connected to database

--- a/office-spaces/src/app/components/member-overview/member-overview.component.html
+++ b/office-spaces/src/app/components/member-overview/member-overview.component.html
@@ -142,7 +142,8 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content p-3 border-radius">
       <div class="row">
-        <div class="col-1 d-flex align-items-center">
+        <div class="col-1 d-flex align-items-center" data-bs-toggle="modal"
+        data-bs-target="#edit-member-modal-1">
           <img src="assets/icons/arrow-left.svg" />
         </div>
         <div class="col pe-0">
