--- a/office-spaces/src/app/pages/add-office/add-office.component.html
+++ b/office-spaces/src/app/pages/add-office/add-office.component.html
@@ -1,6 +1,6 @@
 <div class="container my-3 max-width-600">
   <div class="row mb-5">
-    <div class="col-1">
+    <div class="col-1" (click)="back()">
       <img src="assets/icons/arrow-left.svg" />
     </div>
     <div class="col d-flex justify-content-center">
