--- a/office-spaces/src/app/pages/landing-page/landing-page.component.html
+++ b/office-spaces/src/app/pages/landing-page/landing-page.component.html
@@ -1,9 +1,7 @@
 <div class="container my-3 max-width-1000">
   <h2 class="mb-3">All Offices</h2>
-  <app-office-card></app-office-card>
-  <app-office-card></app-office-card>
-  <app-office-card></app-office-card>
-  <app-office-card></app-office-card>
+
+  <app-office-card [offices]="offices"></app-office-card>
 
   <div class="overlay-button" (click)="addOfficeClicked()">
     <img src="assets/icons/add-button.svg" />
