--- a/office-spaces/src/app/pages/office-view/office-view.component.html
+++ b/office-spaces/src/app/pages/office-view/office-view.component.html
@@ -1,6 +1,6 @@
 <div class="container my-3 max-width-600">
   <div class="row mb-3">
-    <div class="col-1">
+    <div class="col-1" (click)="back()">
       <img src="assets/icons/arrow-left.svg" />
     </div>
     <div class="col d-flex justify-content-center">
@@ -113,7 +113,8 @@
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content p-3 border-radius">
         <div class="row">
-          <div class="col-1 d-flex align-items-center">
+          <div class="col-1 d-flex align-items-center" data-bs-toggle="modal"
+          data-bs-target="#add-new-member-modal-1">
             <img src="assets/icons/arrow-left.svg" />
           </div>
           <div class="col pe-0">
