--- a/office-spaces/src/app/components/office-card/office-card.component.html
+++ b/office-spaces/src/app/components/office-card/office-card.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let office of offices; let i = index">
+<div *ngIf="office != null">
   <div class="color-stripe ps-2 mb-4">
     <div class="card d-flex">
       <div class="row mt-2">
@@ -21,7 +21,7 @@
         <div class="col-8 justify-content-start">
           <!-- <div class="fs-12 fw-700 py-2">5&nbsp;</div> -->
           <div class="fs-12 ps-2 text-color">
-            <strong>5</strong> Staff Members in Office
+            <strong>{{ office.members.length }}</strong> Staff Members in Office
           </div>
         </div>
         <div class="col"></div>
@@ -37,8 +37,8 @@
         </div>
         <div
           class="col-5 d-flex justify-content-start"
-          (click)="toggleDrawer(i)"
-          [ngClass]="status[i] ? 'rotate' : 'up'"
+          (click)="toggleSingleDrawer()"
+          [ngClass]="open ? 'rotate' : 'up'"
         >
           <div class="chevron">
             <img src="assets/icons/chevron.svg" />
@@ -48,8 +48,8 @@
 
       <div
         id="dropdown"
-        [ngClass]="status[i] ? 'show' : 'hide'"
-        (click)="officeCardClicked()"
+        [ngClass]="open ? 'show' : 'hide'"
+        (click)="officeCardClicked(office.id)"
       >
         <div class="row pb-2 pt-3 flex-nowrap align-items-center">
           <div class="col-2 mw-70">
@@ -103,4 +103,113 @@
       </div>
     </div>
   </div>
+</div>
+
+<div *ngIf="offices != null">
+<div *ngFor="let office of offices; let i = index">
+  <div class="color-stripe ps-2 mb-4">
+    <div class="card d-flex">
+      <div class="row mt-2">
+        <div class="col ms-3 mt-1">
+          <h3 class="fw-800"> {{ office.name }} </h3>
+        </div>
+        <div class="col d-flex justify-content-end">
+          <div class="icon me-3" (click)="editOfficeClicked(office.id)">
+            <img src="assets/icons/edit.svg" />
+          </div>
+        </div>
+      </div>
+
+      <div class="row py-2 flex-nowrap align-items-center">
+        <div class="col-2 mw-70">
+          <div class="wh-24 ms-3">
+            <img src="assets/icons/people.svg" />
+          </div>
+        </div>
+        <div class="col-8 justify-content-start">
+          <!-- <div class="fs-12 fw-700 py-2">5&nbsp;</div> -->
+          <div class="fs-12 ps-2 text-color">
+            <strong>{{ office.members.length }}</strong> Staff Members in Office
+          </div>
+        </div>
+        <div class="col"></div>
+      </div>
+
+      <div class="px-3">
+        <div class="my-3 horizontal-line"></div>
+      </div>
+
+      <div class="row flex-nowrap">
+        <div class="col-6 ms-4 d-flex justify-content-end align-items-center">
+          <div class="fs-12">More info</div>
+        </div>
+        <div
+          class="col-5 d-flex justify-content-start"
+          (click)="toggleDrawer(i)"
+          [ngClass]="status[i] ? 'rotate' : 'up'"
+        >
+          <div class="chevron">
+            <img src="assets/icons/chevron.svg" />
+          </div>
+        </div>
+      </div>
+
+      <div
+        id="dropdown"
+        [ngClass]="status[i] ? 'show' : 'hide'"
+        (click)="officeCardClicked(office.id)"
+      >
+        <div class="row pb-2 pt-3 flex-nowrap align-items-center">
+          <div class="col-2 mw-70">
+            <div class="wh-24 ms-3">
+              <img src="assets/icons/phone.svg" />
+            </div>
+          </div>
+          <div class="col-8 justify-content-start">
+            <div class="fs-12 ps-2 fw-400"> {{ office.phone }} </div>
+          </div>
+          <div class="col"></div>
+        </div>
+
+        <div class="row py-2 flex-nowrap align-items-center">
+          <div class="col-2 mw-70">
+            <div class="wh-24 ms-3">
+              <img src="assets/icons/email.svg" />
+            </div>
+          </div>
+          <div class="col-8 justify-content-start">
+            <div class="fs-12 ps-2">{{ office.email }}</div>
+          </div>
+          <div class="col"></div>
+        </div>
+
+        <div class="row py-2 flex-nowrap align-items-center">
+          <div class="col-2 mw-70">
+            <div class="wh-24 ms-3">
+              <img src="assets/icons/broken-people.svg" />
+            </div>
+          </div>
+          <div class="col-8 justify-content-start">
+            <div class="fs-12 ps-2">Office Capacity: {{ office.capacity }}</div>
+          </div>
+          <div class="col"></div>
+        </div>
+
+        <div class="row py-2 flex-nowrap align-items-center">
+          <div class="col-2 mw-70">
+            <div class="wh-24 ms-3">
+              <img src="assets/icons/location.svg" />
+            </div>
+          </div>
+          <div class="col-8 justify-content-start">
+            <div class="fs-12 ps-2">
+              {{ office.address }}
+            </div>
+          </div>
+          <div class="col"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 </div>
