--- a/office-spaces/src/app/pages/landing-page/landing-page.component.html
+++ b/office-spaces/src/app/pages/landing-page/landing-page.component.html
@@ -1,6 +1,10 @@
 <div class="container my-3 max-width-1000">
   <h2 class="mb-3">All Offices</h2>
 
+  <div *ngIf="offices.length == 0">
+    <div class="row justify-content-center mt-5">No Offices Added Yet</div>
+  </div>
+
   <app-office-card [offices]="offices"></app-office-card>
 
   <div class="overlay-button" (click)="addOfficeClicked()">
