--- a/office-spaces/src/app/pages/edit-office/edit-office.component.html
+++ b/office-spaces/src/app/pages/edit-office/edit-office.component.html
@@ -77,6 +77,12 @@
           <div class="custom-button" (click)="saveOffice()">UPDATE OFFICE</div>
         </div>
       </div>
+     
+      <div class="mt-5 mb-5">
+        <div class="row blue-text text-center justify-content-center">
+          <div class="" (click)="deleteOffice()">DELETE OFFICE</div>
+        </div>
+      </div>
     </div>
   </div>
 
