--- a/office-spaces/src/app/pages/office-view/office-view.component.css
+++ b/office-spaces/src/app/pages/office-view/office-view.component.css
@@ -25,3 +25,11 @@
   width: 100%;
   padding-right: 10px;
 }
+
+.search-bar {
+  width: 100%;
+  background: #ffffff;
+  border: 1px solid #e8f3fc;
+  border-radius: 8px;
+  padding: 10px;
+}
