responsive updates, delete associated items on office delete

--- a/office-spaces/src/app/app.component.html
+++ b/office-spaces/src/app/app.component.html
@@ -1,2 +1,11 @@
+<div class="row d-flex">
+  <div class="col d-flex justify-content-start">
+    <img class="ms-3 mt-2" src="assets/icons/top-nav-left.svg" />
+  </div>
+  <div class="col d-flex justify-content-end">
+    <img class="me-3 mt-2" src="assets/icons/top-nav-right.svg" />
+  </div>
+</div>
+
 <router-outlet></router-outlet>
 <app-loading></app-loading>
