--- a/office-spaces/src/app/components/member-overview/member-overview.component.html
+++ b/office-spaces/src/app/components/member-overview/member-overview.component.html
@@ -111,7 +111,7 @@
 
 <ng-template #template4>
   <div class="modal-body">
-    <div class="p-3 border-radius">
+    <div class="p-2 border-radius">
       <div class="row">
         <div class="col-1 d-flex align-items-center" (click)="openModal3(template3); closeModal(4)">
           <img src="assets/icons/arrow-left.svg" />
@@ -126,7 +126,7 @@
           <img src="assets/icons/close-circle.svg" />
         </div>
       </div>
-      <div class="fs-24 fw-600 my-3">Avatar</div>
+      <div class="fs-24 fw-600 mb-3 mt-5">Avatar</div>
 
       <div class="row justify-content-center mb-2">
         <div
