--- a/office-spaces/src/app/components/member-overview/member-overview.component.css
+++ b/office-spaces/src/app/components/member-overview/member-overview.component.css
@@ -13,9 +13,9 @@
 
 ::ng-deep .modal-dialog {
   max-width: 500px !important;
-  width: 400px;
 }
 
 ::ng-deep .modal-content {
   border-radius: 8px;
+  width: 96%;
 }
