--- a/office-spaces/src/app/pages/edit-office/edit-office.component.html
+++ b/office-spaces/src/app/pages/edit-office/edit-office.component.html
@@ -56,12 +56,12 @@
         />
       </div>
     
-      <h3 class="fw-600 my-5">Office Color</h3>
+      <h3 class="fw-600 my-3">Office Color</h3>
     
       <div class="row justify-content-center mb-2">
         <div
           *ngFor="let color of colors; let i = index"
-          class="mw-55 mx-2 my-1 d-flex justify-content-center"
+          class="mw-43 mx-2 my-1 d-flex justify-content-center"
         >
           <img
             [ngClass]="toggle[i] ? 'dark' : 'null'"
@@ -72,13 +72,13 @@
         </div>
       </div>
     
-      <div class="mt-5">
+      <div class="my-4">
         <div class="row justify-content-center">
           <div class="custom-button" (click)="saveOffice()">UPDATE OFFICE</div>
         </div>
       </div>
      
-      <div class="mt-5 mb-5">
+      <div class="mb-5">
         <div class="row blue-text text-center justify-content-center">
           <div class="" (click)="deleteOffice()">DELETE OFFICE</div>
         </div>
