--- a/office-spaces/src/app/pages/office-view/office-view.component.html
+++ b/office-spaces/src/app/pages/office-view/office-view.component.html
@@ -1,4 +1,6 @@
 <div class="container my-3 max-width-600">
+  <div *ngIf="isFormValid" class="snackbar">Please fill in all fields.</div>
+  
   <div class="row mb-3">
     <div class="col-1" (click)="back()">
       <img src="assets/icons/arrow-left.svg" />
