--- a/office-spaces/src/styles.css
+++ b/office-spaces/src/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #F8FAFC;
+  background-color: #f8fafc;
   /* font-family: 'inter'; */
   color: #484954;
 }
@@ -12,6 +12,15 @@ body {
 .icon {
   width: 17px;
   height: 17.4px;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  width: 200px;
+  margin: auto;
+  margin-top: calc((100vh / 2) - 50px);
+  overflow: hidden;
 }
 
 .chevron {
@@ -35,6 +44,10 @@ body {
 
 .w-10 {
   width: 10%;
+}
+
+.mw-43 {
+  max-width: 43px;
 }
 
 .mw-55 {
@@ -83,7 +96,7 @@ body {
 
 .horizontal-line {
   height: 1px;
-  border-top: 0.4px solid #0D4477;
+  border-top: 0.4px solid #0d4477;
 }
 
 .grey {
@@ -103,30 +116,46 @@ body {
 }
 
 .custom-button {
-  background: #489DDA;
+  background: #489dda;
   border-radius: 100px;
   height: 48px;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 14px;
-  color: #F8FAFC;
+  color: #f8fafc;
   max-width: 232px;
 }
 
 .custom-button-red {
-  background: #F44336;
+  background: #f44336;
   border-radius: 100px;
   height: 48px;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 14px;
-  color: #F8FAFC;
+  color: #f8fafc;
   max-width: 232px;
 }
 
 .blue-text {
-  color: #489DDA;
+  color: #489dda;
   font-size: 14px;
+}
+
+.snackbar {
+  min-width: 50px;
+  margin-left: -125px;
+  border-radius: 8px;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  border-radius: 2px;
+  padding: 5px;
+  position: fixed;
+  z-index: 1;
+  top: 10px;
+  right: 10px;
+  left: 80%;
 }
