styling updates, form validation, search bar updated

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<div class="row d-flex">
+<div class="row d-flex mx-3 mt-2">
   <div class="col d-flex justify-content-start">
-    <img class="ms-3 mt-2" src="assets/icons/top-nav-left.svg" />
+    <img src="assets/icons/top-nav-left.svg" />
   </div>
   <div class="col d-flex justify-content-end">
-    <img class="me-3 mt-2" src="assets/icons/top-nav-right.svg" />
+    <img src="assets/icons/top-nav-right.svg" />
   </div>
 </div>
 
