--- a/src/app/pages/add-office/add-office.component.html
+++ b/src/app/pages/add-office/add-office.component.html
@@ -2,7 +2,7 @@
   <div *ngIf="isFormValid" class="snackbar">Please fill in all fields.</div>
 
   <div class="row mb-5">
-    <div class="col-1" (click)="back()">
+    <div class="col-1 pointer" (click)="back()">
       <img src="assets/icons/arrow-left.svg" />
     </div>
     <div class="col d-flex justify-content-center">
@@ -32,7 +32,7 @@
     </div>
     <div class="blue-border-container my-4">
       <input
-        type="text"
+        type="email"
         class="form-control border-0 shadow-none"
         id="email-address"
         placeholder="Email Address"
@@ -44,13 +44,14 @@
         type="text"
         class="form-control border-0 shadow-none"
         id="phone-number"
+        pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"
         placeholder="Phone Number"
         [(ngModel)]="office.phone"
       />
     </div>
     <div class="blue-border-container my-4">
       <input
-        type="text"
+        type="number"
         class="form-control border-0 shadow-none"
         id="maximum-capacity"
         placeholder="Maximum Capacity"
@@ -63,7 +64,7 @@
     <div class="row justify-content-center mb-2">
       <div
         *ngFor="let color of colors; let i = index"
-        class="mw-43 mx-2 my-1 d-flex justify-content-center"
+        class="mw-43 mx-2 my-1 d-flex justify-content-center pointer"
       >
         <img
           [ngClass]="toggle[i] ? 'dark' : 'null'"
@@ -76,7 +77,7 @@
 
     <div class="mt-4 mb-5">
       <div class="row justify-content-center">
-        <div class="custom-button" (click)="addOffice()">ADD OFFICE</div>
+        <div class="custom-button pointer" (click)="addOffice()">ADD OFFICE</div>
       </div>
     </div>
   </div>
