--- a/src/app/pages/edit-office/edit-office.component.html
+++ b/src/app/pages/edit-office/edit-office.component.html
@@ -1,6 +1,6 @@
 <div class="container my-3 max-width-1000">
   <div class="row mb-5">
-    <div class="col-1" (click)="back()">
+    <div class="col-1 pointer" (click)="back()">
       <img src="assets/icons/arrow-left.svg" />
     </div>
     <div class="col d-flex justify-content-center">
@@ -30,7 +30,7 @@
       </div>
       <div class="blue-border-container my-4">
         <input
-          type="text"
+          type="email"
           class="form-control border-0 shadow-none"
           id="email-address"
           placeholder="Email Address"
@@ -42,13 +42,14 @@
           type="text"
           class="form-control border-0 shadow-none"
           id="phone-number"
+          pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"
           placeholder="Phone Number"
           [(ngModel)]="office.phone"
         />
       </div>
       <div class="blue-border-container my-4">
         <input
-          type="text"
+          type="number"
           class="form-control border-0 shadow-none"
           id="maximum-capacity"
           placeholder="Maximum Capacity"
@@ -61,7 +62,7 @@
       <div class="row justify-content-center mb-2">
         <div
           *ngFor="let color of colors; let i = index"
-          class="mw-43 mx-2 my-1 d-flex justify-content-center"
+          class="mw-43 mx-2 my-1 d-flex justify-content-center pointer"
         >
           <img
             [ngClass]="toggle[i] ? 'dark' : 'null'"
@@ -74,12 +75,12 @@
     
       <div class="my-4">
         <div class="row justify-content-center">
-          <div class="custom-button" (click)="saveOffice()">UPDATE OFFICE</div>
+          <div class="custom-button pointer" (click)="saveOffice()">UPDATE OFFICE</div>
         </div>
       </div>
      
       <div class="mb-5">
-        <div class="row blue-text text-center justify-content-center">
+        <div class="row blue-text text-center justify-content-center pointer">
           <div class="" (click)="deleteOffice()">DELETE OFFICE</div>
         </div>
       </div>
