--- a/src/app/pages/landing-page/landing-page.component.html
+++ b/src/app/pages/landing-page/landing-page.component.html
@@ -7,7 +7,7 @@
 
   <app-office-card [offices]="offices"></app-office-card>
 
-  <div class="overlay-button" (click)="addOfficeClicked()">
-    <img src="assets/icons/add-button.svg" />
+  <div class="overlay-button pointer" (click)="addOfficeClicked()">
+    <img class="d-flex justify-content-center align-items-center" src="assets/icons/add-button.svg" />
   </div>
 </div>
