Phone Number changed to type=tel

--- a/src/app/pages/add-office/add-office.component.html
+++ b/src/app/pages/add-office/add-office.component.html
@@ -41,7 +41,7 @@
     </div>
     <div class="blue-border-container my-4">
       <input
-        type="text"
+        type="tel"
         class="form-control border-0 shadow-none"
         id="phone-number"
         pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"
